Part4/Exercise4.08/manifests-overlays/overlays/staging/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-staging
spec:
  controller: k8s.io/ingress-nginx
