Part4/Exercise4.08/manifests-overlays/overlays/staging/dep-analysistemplate-back.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: project
  name: todo-backend-dep
spec:
  strategy:
    canary:
      steps:
      - setWeight: 25
      - pause:
          duration: 30s
      - setWeight: 50
      - pause:
          duration: 30s
      - analysis:
          templates:
            - templateName: staging-cpu-usage-rate
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: project
          imagePullPolicy: Always
          image: IMAGE/TODOS-BACKEND
