Part4/Exercise4.08/manifests-overlays/overlays/staging/dep-analysistemplate.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: project
  # name: project-dep
spec:
  strategy:
    canary:
      steps:
      - analysis:
          templates:
            - templateName: staging-cpu-usage-rate
