Part4/Exercise4.08/manifests-overlays/overlays/staging/dep-project.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: project
  name: project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  strategy:
    canary:
      steps:
      - setWeight: 25
      - pause:
          duration: 30s
      - setWeight: 50
      - pause:
          duration: 30s
      - analysis:
          templates:
          - templateName: staging-cpu-usage-rate
