Part4/Exercise4.08/manifests-overlays/overlays/staging/prefixptransformer.yaml
apiVersion: builtin
kind: PrefixSuffixTransformer
metadata:
  name: customPrefixer
prefix: "staging-"
fieldSpecs:
- kind: Deployment
  path: metadata/name
