Part4/Exercise4.08/manifests-overlays/overlays/staging/statefulset-todos-db.yaml
apiVersion: apps/v1
kind: StatefulSet
# metadata:
#   namespace: project
#   name: todo-db-stset
spec:
  template:
    spec:
      volumes:
        - name: somedata
          persistentVolumeClaim:
            claimName: staging-somedata-pvc
