Part4/Exercise4.08/manifests-overlays/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
  namespace: staging
spec:
  ingressClassName: nginx
  loadBalancerIP: 10.0.0.2
